...
                                    <autoresizingMask key="autoresizingMask"/>
                                </tableViewCellContentView>
                                <inset key="separatorInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                            </tableViewCell>
                        </prototypes>
                    </tableView>
                    <navigationItem key="navigationItem" title="TODO" id="1vi-CT-2zy"/>
                    <connections>
                        <outlet property="pendingTableView" destination="v35-Ga-aw1" id="85E-Go-tlD"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="lzs-vc-Xex" sceneMemberID="firstResponder"/>
            </objects>
...
